--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -6,7 +6,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-  <title>THE UNTITLED GAME</title>
+  <title>THIS CURSED MACHINE</title>
 
   <style>
     body,
