--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -6,6 +6,9 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
+  <!-- This is used by the ports implementation -->
+  <script src="https://cdn.jsdelivr.net/npm/leader-line-new@1.1.9/leader-line.min.js"></script>
+
   <title>THIS CURSED MACHINE</title>
 
   <style>
