--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -9,7 +9,8 @@
   <!-- This is used by the ports implementation -->
   <script src="https://cdn.jsdelivr.net/npm/leader-line-new@1.1.9/leader-line.min.js"></script>
 
-  <title>THIS CURSED MACHINE</title>
+  <title>
+    MACHINE</title>
 
   <style>
     body,
