feat: remove a ton, add graphs, and a basic terminal

--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -8,6 +8,7 @@
 
   <!-- This is used by the ports implementation -->
   <script src="https://cdn.jsdelivr.net/npm/leader-line-new@1.1.9/leader-line.min.js"></script>
+  <link rel="stylesheet" type="text/css" src="/stylesheet.css">
 
   <title>
     MACHINE</title>
@@ -27,7 +28,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      font-family: Courier, monospace
+      font-family: "Fake Receipt", monospace, Arial, sans-serif;
     }
   </style>
 </head>
