--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="UTF-8" />
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
   <!-- This is used by the ports implementation -->
@@ -27,7 +26,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      font-family: Courier, monospace
+      font-family: 'Fake Receipt', monospace;
     }
   </style>
 </head>
