feat: loading sequence

--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -8,8 +8,7 @@
   <!-- This is used by the ports implementation -->
   <script src="https://cdn.jsdelivr.net/npm/leader-line-new@1.1.9/leader-line.min.js"></script>
 
-  <title>
-    MACHINE</title>
+  <title>MACHINE</title>
 
   <style>
     body,
