--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -7,9 +7,15 @@
 
   <link rel="icon" type="image/x-icon" href="/favicon.png">
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Sixtyfour&family=Workbench&display=swap"
+    rel="stylesheet"> -->
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Sixtyfour:BLED,SCAN@20,-53&family=Workbench:SCAN@-40&display=swap"
     rel="stylesheet">
 
   <!-- FULL STORY -->
